--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,19 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "./node_modules/ngx-toastr/toastr.css",
+              "src/styles.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.css",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/leaflet/dist/leaflet.js",
+              "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"
+              
             ]
           },
           "configurations": {
