--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
+    "@angular/animations": "^14.0.6",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -19,6 +19,15 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.9.1",
+    "font-awesome": "^4.7.0",
+    "google-maps": "^4.3.3",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
+    "leaflet": "^1.8.0",
+    "leaflet.locatecontrol": "^0.76.1",
+    "ngx-gallery": "^5.10.0",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -28,6 +37,8 @@
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet": "^1.7.11",
+    "@types/leaflet.locatecontrol": "^0.74.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
