--- a/angular.json
+++ b/angular.json
@@ -18,25 +18,22 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-toastr/toastr.css",
               "src/styles.css",
               "node_modules/leaflet/dist/leaflet.css",
               "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.css",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
-
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "./node_modules/swiper/swiper-bundle.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/leaflet/dist/leaflet.js",
-              "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"
-              
+              "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js",
+              "./node_modules/swiper/swiper-bundle.min.js"
             ]
           },
           "configurations": {
@@ -97,13 +94,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
