--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-gallery": "^5.10.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
