--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
               "src/styles.css",
               "node_modules/leaflet/dist/leaflet.css",
               "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.css",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "./node_modules/swiper/swiper-bundle.min.css"
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
