--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
+    "leaflet-geosearch": "^3.6.1",
     "leaflet.locatecontrol": "^0.76.1",
+    "ng2-file-upload": "^1.4.0",
     "ngx-gallery": "^5.10.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
