--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.6",
+    "@angular/cdk": "^14.1.1",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.1.1",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@syncfusion/ej2-angular-navigations": "^20.2.43",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
     "font-awesome": "^4.7.0",
