--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css",
               "node_modules/leaflet/dist/leaflet.css",
               "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.css",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "./node_modules/leaflet-geosearch/dist/geosearch.css"
+
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -34,6 +36,7 @@
               "node_modules/leaflet/dist/leaflet.js",
               "./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js",
               "./node_modules/swiper/swiper-bundle.min.js"
+
             ]
           },
           "configurations": {
