--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
     "leaflet-geosearch": "^3.6.1",
+    "leaflet-toolbar": "^0.4.0-alpha.2",
     "leaflet.locatecontrol": "^0.76.1",
     "ng2-file-upload": "^1.4.0",
     "ngx-gallery": "^5.10.0",
